--- a/parasol/parasol/templates/job-parasol-web.yaml
+++ b/parasol/parasol/templates/job-parasol-web.yaml
@@ -24,4 +24,4 @@ spec:
       volumes:
       - name: parasol-web-vol
         configMap:
-          name: parasol-web-templates
+          name: parasol-web-manifests
