--- a/parasol/parasol/templates/parasol-db-manifests.yaml
+++ b/parasol/parasol/templates/parasol-db-manifests.yaml
@@ -1,13 +1,13 @@
 kind: ConfigMap
 metadata:
-  name:  parasol-store-build-templates
+  name:  parasol-db-manifests
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 apiVersion: v1
 data:
   playbook.yaml: |
     ---
-    - name: Parasol templates
+    - name: Parasol manifests
       hosts: localhost
       tasks:
         - name: Check existence of group
@@ -28,7 +28,7 @@ data:
           ansible.builtin.command: git config --global user.name "{{ $.Values.gitlab.email.displayName }}"
           ignore_errors: true
 
-{{- range $item := .Values.parasol.store.templates }}
+{{- range $item := .Values.parasol.db.templates }}
 
         - name: Build git repo url
           ansible.builtin.set_fact:
@@ -77,29 +77,11 @@ data:
             dest: /tmp/{{ $item.project }}/{{ $item1 }}
             mode: "0660"         
           vars:
-            parasol_store_build_argocd_name: "{{ $.Values.parasol.store.argocd.name }}"
-            parasol_store_build_argocd_namespace: "{{ $.Values.parasol.store.argocd.namespace }}"
-            parasol_store_build_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
-            parasol_store_build_repo_revision: "{{ $item.branch }}"
-            parasol_store_build_namespace: "{{ $item.namespace }}"
-            parasol_store_git_host: "{{ $.Values.gitlab.host }}"
-            parasol_store_git_group: "{{ $.Values.parasol.store.gitlab.group }}"
-            parasol_store_git_repo: "{{ $.Values.parasol.store.gitlab.repo }}"
-            parasol_store_build_registry_host: "{{ $.Values.registry.host }}"
-            parasol_store_build_registry_organization: "{{ $.Values.registry.organization }}"
-            parasol_store_build_image_name: "{{ $.Values.parasol.store.image.name }}"
-            parasol_store_build_registry_username: "{{ $.Values.registry.username }}"
-            parasol_store_build_registry_password: "{{ $.Values.registry.password }}"
-            parasol_store_build_cluster_subdomain: "{{ $.Values.cluster.subdomain }}"
-            parasol_store_manifests_git_group: "{{ $.Values.parasol.store.manifests.gitlab.group }}"
-            parasol_store_manifests_git_repo: "{{ $.Values.parasol.store.manifests.gitlab.repo }}"
-            parasol_store_manifests_git_branch_dev: "{{ $.Values.parasol.store.manifests.gitlab.branch.dev }}"
-            parasol_store_manifests_git_branch_staging: "{{ $.Values.parasol.store.manifests.gitlab.branch.staging }}"
-            parasol_store_manifests_git_branch_prod: "{{ $.Values.parasol.store.manifests.gitlab.branch.prod }}"
-            parasol_store_manifest_file_dev: "{{ $.Values.parasol.store.manifests.files.dev }}"
-            parasol_store_manifest_file_staging: "{{ $.Values.parasol.store.manifests.files.staging }}"
-            parasol_store_manifest_file_prod: "{{ $.Values.parasol.store.manifests.files.prod }}"
-            parasol_store_git_user: "{{ $.Values.gitlab.user }}"
+            parasol_db_argocd_name: "{{ $.Values.parasol.db.argocd.name }}"
+            parasol_db_argocd_namespace: "{{ $.Values.parasol.db.argocd.namespace }}"
+            parasol_db_repo_url: "https://{{ $.Values.gitlab.host }}/parasol/{{ $item.project }}.git"
+            parasol_db_repo_revision: "{{ $item.branch }}"
+            parasol_db_namespace: "{{ $item.namespace }}"
 {{- end }}
 
         - name: Add new files to the repository
