--- a/parasol/parasol-build/templates/parasol-store-build-manifests.yaml
+++ b/parasol/parasol-build/templates/parasol-store-build-manifests.yaml
@@ -1,8 +1,8 @@
 kind: ConfigMap
 metadata:
-  name:  parasol-web-templates
+  name:  parasol-store-build-manifests
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "0"
 apiVersion: v1
 data:
   playbook.yaml: |
@@ -28,7 +28,7 @@ data:
           ansible.builtin.command: git config --global user.name "{{ $.Values.gitlab.email.displayName }}"
           ignore_errors: true
 
-{{- range $item := .Values.parasol.web.templates }}
+{{- range $item := .Values.parasol.store.templates }}
 
         - name: Build git repo url
           ansible.builtin.set_fact:
@@ -77,22 +77,29 @@ data:
             dest: /tmp/{{ $item.project }}/{{ $item1 }}
             mode: "0660"         
           vars:
-            parasol_web_argocd_name: "{{ $.Values.parasol.web.argocd.name }}"
-            parasol_web_argocd_namespace: "{{ $.Values.parasol.web.argocd.namespace }}"
-            parasol_web_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
-            parasol_web_repo_revision: "{{ $item.branch }}"
-            parasol_web_namespace: "{{ $item.namespace }}"
-            parasol_web_image_registry_host: "{{ $.Values.registry.host }}"
-            parasol_web_image_registry_organization: "{{ $.Values.registry.organization }}"
-            parasol_web_image_registry_image_name: "{{ $.Values.parasol.web.image.name }}"
-            parasol_web_image_registry_image_tag: "{{ $.Values.parasol.web.image.tag }}"
-            parasol_web_image_registry_username: "{{ $.Values.registry.username }}"
-            parasol_web_image_registry_password: "{{ $.Values.registry.password }}"
-            parasol_web_store_app_url: "{{ $item.store.url }}"
-            parasol_web_store_app_service: "{{ $item.store.service }}"
-            parasol_web_sso_url: "{{ include "sso.url" (list $ $item.environment) }}"
-            parasol_web_sso_client: "{{ include "sso.client" (list $ $item.environment) }}"
-            parasol_web_sso_logout_url: "{{ include "sso.logout-url" (list $ $item) }}"
+            parasol_store_build_argocd_name: "{{ $.Values.parasol.store.argocd.name }}"
+            parasol_store_build_argocd_namespace: "{{ $.Values.parasol.store.argocd.namespace }}"
+            parasol_store_build_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
+            parasol_store_build_repo_revision: "{{ $item.branch }}"
+            parasol_store_build_namespace: "{{ $item.namespace }}"
+            parasol_store_git_host: "{{ $.Values.gitlab.host }}"
+            parasol_store_git_group: "{{ $.Values.parasol.store.gitlab.group }}"
+            parasol_store_git_repo: "{{ $.Values.parasol.store.gitlab.repo }}"
+            parasol_store_build_registry_host: "{{ $.Values.registry.host }}"
+            parasol_store_build_registry_organization: "{{ $.Values.registry.organization }}"
+            parasol_store_build_image_name: "{{ $.Values.parasol.store.image.name }}"
+            parasol_store_build_registry_username: "{{ $.Values.registry.username }}"
+            parasol_store_build_registry_password: "{{ $.Values.registry.password }}"
+            parasol_store_build_cluster_subdomain: "{{ $.Values.cluster.subdomain }}"
+            parasol_store_manifests_git_group: "{{ $.Values.parasol.store.manifests.gitlab.group }}"
+            parasol_store_manifests_git_repo: "{{ $.Values.parasol.store.manifests.gitlab.repo }}"
+            parasol_store_manifests_git_branch_dev: "{{ $.Values.parasol.store.manifests.gitlab.branch.dev }}"
+            parasol_store_manifests_git_branch_staging: "{{ $.Values.parasol.store.manifests.gitlab.branch.staging }}"
+            parasol_store_manifests_git_branch_prod: "{{ $.Values.parasol.store.manifests.gitlab.branch.prod }}"
+            parasol_store_manifest_file_dev: "{{ $.Values.parasol.store.manifests.files.dev }}"
+            parasol_store_manifest_file_staging: "{{ $.Values.parasol.store.manifests.files.staging }}"
+            parasol_store_manifest_file_prod: "{{ $.Values.parasol.store.manifests.files.prod }}"
+            parasol_store_git_user: "{{ $.Values.gitlab.user }}"
 {{- end }}
 
         - name: Add new files to the repository
