--- a/parasol/parasol/templates/parasol-web-manifests.yaml
+++ b/parasol/parasol/templates/parasol-web-manifests.yaml
@@ -1,13 +1,13 @@
 kind: ConfigMap
 metadata:
-  name:  parasol-store-templates
+  name:  parasol-web-manifests
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 apiVersion: v1
 data:
   playbook.yaml: |
     ---
-    - name: Parasol templates
+    - name: Parasol manifests
       hosts: localhost
       tasks:
         - name: Check existence of group
@@ -28,7 +28,7 @@ data:
           ansible.builtin.command: git config --global user.name "{{ $.Values.gitlab.email.displayName }}"
           ignore_errors: true
 
-{{- range $item := .Values.parasol.store.templates }}
+{{- range $item := .Values.parasol.web.templates }}
 
         - name: Build git repo url
           ansible.builtin.set_fact:
@@ -77,18 +77,22 @@ data:
             dest: /tmp/{{ $item.project }}/{{ $item1 }}
             mode: "0660"         
           vars:
-            parasol_store_argocd_name: "{{ $.Values.parasol.store.argocd.name }}"
-            parasol_store_argocd_namespace: "{{ $.Values.parasol.store.argocd.namespace }}"
-            parasol_store_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
-            parasol_store_repo_revision: "{{ $item.branch }}"
-            parasol_store_namespace: "{{ $item.namespace }}"
-            parasol_store_image_registry_host: "{{ $.Values.registry.host }}"
-            parasol_store_image_registry_organization: "{{ $.Values.registry.organization }}"
-            parasol_store_image_registry_image_name: "{{ $.Values.parasol.store.image.name }}"
-            parasol_store_image_registry_image_tag: "{{ $.Values.parasol.store.image.tag }}"
-            parasol_store_image_registry_username: "{{ $.Values.registry.username }}"
-            parasol_store_image_registry_password: "{{ $.Values.registry.password }}"
-
+            parasol_web_argocd_name: "{{ $.Values.parasol.web.argocd.name }}"
+            parasol_web_argocd_namespace: "{{ $.Values.parasol.web.argocd.namespace }}"
+            parasol_web_repo_url: "https://{{ $.Values.gitlab.host }}/{{ $.Values.parasol.group }}/{{ $item.project }}.git"
+            parasol_web_repo_revision: "{{ $item.branch }}"
+            parasol_web_namespace: "{{ $item.namespace }}"
+            parasol_web_image_registry_host: "{{ $.Values.registry.host }}"
+            parasol_web_image_registry_organization: "{{ $.Values.registry.organization }}"
+            parasol_web_image_registry_image_name: "{{ $.Values.parasol.web.image.name }}"
+            parasol_web_image_registry_image_tag: "{{ $.Values.parasol.web.image.tag }}"
+            parasol_web_image_registry_username: "{{ $.Values.registry.username }}"
+            parasol_web_image_registry_password: "{{ $.Values.registry.password }}"
+            parasol_web_store_app_url: "{{ $item.store.url }}"
+            parasol_web_store_app_service: "{{ $item.store.service }}"
+            parasol_web_sso_url: "{{ include "sso.url" (list $ $item.environment) }}"
+            parasol_web_sso_client: "{{ include "sso.client" (list $ $item.environment) }}"
+            parasol_web_sso_logout_url: "{{ include "sso.logout-url" (list $ $item) }}"
 {{- end }}
 
         - name: Add new files to the repository
