--- a/parasol/Chart.yaml
+++ b/parasol/Chart.yaml
@@ -14,3 +14,6 @@ dependencies:
   - name: parasol-build
     version: 0.1.0
     repository: file://parasol-build
+  - name: parasol-templates
+    version: 0.1.0
+    repository: file://parasol-templates
