use external values file from gitlab repo for backstage deployment for

--- a/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
@@ -1,9 +1,20 @@
 nameOverride: "backstage-postgresql"
 
+namespace: default
+
 backstage:
+  argocd:
+    password:
+  gitlab:
+    token:
+  kubernetes:
+    sa_token:
+  oauth:
+    clientId:
+    clientSecret:
   postgresql:
     password: password
 
 argocd:
   enabled: true
-  syncwave: "-2"
+  syncwave: "-1"
