--- a/redhat-developer-hub/Chart.yaml
+++ b/redhat-developer-hub/Chart.yaml
@@ -8,7 +8,9 @@ dependencies:
   - name: redhat-developer-hub-prereqs
     version: 0.1.0
     repository: file://redhat-developer-hub-prereqs
-  - name: redhat-developer-hub
-    alias: redhat-developer-hub
-    repository: https://charts.openshift.io
-    version: 1.3.0
+  - name: redhat-developer-hub-config-template
+    version: 0.1.0
+    repository: file://redhat-developer-hub-config-template
+  - name: redhat-developer-hub-application
+    version: 0.1.0
+    repository: file://redhat-developer-hub-application
