--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/cluster-role-binding-default-sa-admin.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/cluster-role-binding-default-sa-admin.yaml
@@ -1,12 +1,12 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: cluster-admin-default-default
+  name: cluster-admin-default-{{ .Values.namespace }}
   annotations:
     {{- include "redhat-developer-hub-prereqs.argocd-syncwave" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    namespace: default
+    namespace: {{ .Values.namespace }}
     name: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
