--- a/tssc/templates/subscription.yaml
+++ b/tssc/templates/subscription.yaml
@@ -2,7 +2,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: {{ include "openshift-pipelines.name" . }}-operator
+  name: {{ include "tssc.name" . }}-operator
 spec:
   channel: {{ .Values.subscription.channel }}
   installPlanApproval: {{ .Values.subscription.installPlanApproval }}
