--- a/rhtas/rhtas-operator/templates/subscription.yaml
+++ b/rhtas/rhtas-operator/templates/subscription.yaml
@@ -2,7 +2,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: {{ include "rhtas.name" . }}-operator
+  name: {{ include "rhtas-operator.name" . }}
 spec:
   channel: {{ .Values.subscription.channel }}
   installPlanApproval: {{ .Values.subscription.installPlanApproval }}
