--- a/rhtas/rhtas-operator/templates/subscription.yaml
+++ b/rhtas/rhtas-operator/templates/subscription.yaml
@@ -3,6 +3,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: {{ include "rhtas-operator.name" . }}
+  namespace: {{ .Values.namespace }}
 spec:
   channel: {{ .Values.subscription.channel }}
   installPlanApproval: {{ .Values.subscription.installPlanApproval }}
