removed TAS Client redirectUris for the time being

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -644,7 +644,7 @@ spec:
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
-        redirectUris: {{ .Values.client.trusted-artifact-signer.redirectUri }}
+        redirectUris: "*"
         webOrigins: []
         notBefore: 0
         bearerOnly: false
