fixing spec.realm.clients[4].redirectUris: Invalid value:

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -644,7 +644,8 @@ spec:
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
-        redirectUris: "*"
+        redirectUris: 
+          - "*"
         webOrigins: []
         notBefore: 0
         bearerOnly: false
