added cosign-client urn:ietf:wg:oauth:2.0:oob redir value

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -645,7 +645,7 @@ spec:
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
         redirectUris: 
-          - "*"
+          - {{ .Values.client.trustedartifactsigner.redirectUri }}
         webOrigins: []
         notBefore: 0
         bearerOnly: false
