fixed array vs string

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -644,8 +644,7 @@ spec:
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
-        redirectUris: 
-          - {{ .Values.client.trustedartifactsigner.redirectUri }}
+        redirectUris: {{ .Values.client.trustedartifactsigner.redirectUri }}
         webOrigins: []
         notBefore: 0
         bearerOnly: false
