semantic array error, need to use range instead

--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -644,7 +644,10 @@ spec:
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
-        redirectUris: {{ .Values.client.trustedartifactsigner.redirectUri }}
+        redirectUris: 
+        {{- range $redir := .Values.client.trustedartifactsigner.redirectUri }}
+          - {{ $redir }}
+        {{- end }}
         webOrigins: []
         notBefore: 0
         bearerOnly: false
