Updates to ArgoSync waves (#3)
Updates to include ArgoSync waves

--- a/rhtas/rhtas-operator/values.yaml
+++ b/rhtas/rhtas-operator/values.yaml
@@ -1,10 +1,18 @@
 nameOverride: ""
 
+namespace: ""
+
+name: rhtas-operator
 namespace: openshift-operators
 
 subscription:
-  channel: "stable"
+  channel: stable
   installPlanApproval: Automatic
   name: rhtas-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+
+argocd:
+  enabled: true
+  operator:
+    syncwave: "1"
