--- a/rhtas/rhtas-operator/templates/subscription.yaml
+++ b/rhtas/rhtas-operator/templates/subscription.yaml
@@ -2,11 +2,13 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: {{ include "rhtas-operator.name" . }}
+  name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
+  annotations:
+    {{- include "rhtas-operator.argocd-syncwave" . | nindent 4 }}
 spec:
   channel: {{ .Values.subscription.channel }}
   installPlanApproval: {{ .Values.subscription.installPlanApproval }}
   name: {{ .Values.subscription.name }}
   source: {{ .Values.subscription.source }}
-  sourceNamespace: {{ .Values.subscription.sourceNamespace }}
+  sourceNamespace:  {{ .Values.subscription.sourceNamespace }}
