--- a/orchestrator/Chart.yaml
+++ b/orchestrator/Chart.yaml
@@ -8,3 +8,6 @@ dependencies:
   - name: orchestrator-operator
     version: 0.1.0
     repository: file://orchestrator-operator
+  - name: orchestrator
+    version: 0.1.0
+    repository: file://orchestrator
