--- a/orchestrator/Chart.yaml
+++ b/orchestrator/Chart.yaml
@@ -8,6 +8,9 @@ dependencies:
   - name: orchestrator-operator
     version: 0.1.0
     repository: file://orchestrator-operator
+  - name: sonataflow-postgresql
+    version: 0.1.0
+    repository: file://sonataflow-postgresql
   - name: orchestrator
     version: 0.1.0
     repository: file://orchestrator
