--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-orchestrator-token.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-orchestrator-token.yaml
@@ -7,4 +7,4 @@ metadata:
   annotations:
     {{- include "redhat-developer-hub-prereqs.argocd-syncwave" . | nindent 4 }}
 stringData:
-  orchestrator-token: {{ randAlphaNum 24 }}
+  ORCHESTRATOR_TOKEN: {{ randAlphaNum 24 }}
