--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-npmrc.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/secret-backstage-npmrc.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: dynamic-plugins-npmrc
+  name: backstage-dynamic-plugins-npmrc
   labels:
     {{- include "redhat-developer-hub-prereqs.labels" . | nindent 4 }}
   annotations:
