--- a/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
@@ -91,6 +91,7 @@ data:
             backstage_backend_secret: {{ randAlphaNum 24 | b64enc }}
             oauth2_proxy_cookie_secret: {{ randAlpha 32 | lower | b64enc }}
             oauth2_proxy_oidc_issuer: "{{ $.Values.oauth2.issuer }}"
+            orchestrator_sonataflow_data_index_service: "{{ $.Values.orchestrator.sonataFlowDataIndexService }}"
 {{- end }}
 
         - name: Add new files to the repository
