--- a/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
@@ -38,11 +38,17 @@ rbacPolicy:
   - "p, role:default/plugins, argocd.view.read, read, allow"
   - "p, role:default/plugins, kubernetes.proxy, use, allow"
 
-  - "p, role:default/workflowUser, orchestrator.workflow, read, allow"
-  - "p, role:default/workflowUser, orchestrator.workflow.use, use, allow"
+  - "p, role:default/workflowUser, orchestrator.workflowInstances.read, read, allow"
+  - "p, role:default/workflowUser, orchestrator.workflowInstance.read, read, allow"
+  - "p, role:default/workflowUser, orchestrator.workflow.read, read, allow"
+  - "p, role:default/workflowUser, orchestrator.workflow.execute, execute, allow"
+  - "p, role:default/workflowUser, orchestrator.workflowInstance.abort, abort, allow"
 
-  - "p, role:default/workflowAdmin, orchestrator.workflow, read, allow"
-  - "p, role:default/workflowAdmin, orchestrator.workflow.use, use, allow"
+  - "p, role:default/workflowAdmin, orchestrator.workflowInstances.read, read, allow"
+  - "p, role:default/workflowAdmin, orchestrator.workflowInstance.read, read, allow"
+  - "p, role:default/workflowAdmin, orchestrator.workflow.read, read, allow"
+  - "p, role:default/workflowAdmin, orchestrator.workflow.execute, execute, allow"
+  - "p, role:default/workflowAdmin, orchestrator.workflowInstance.abort, abort, allow"
 
   - "g, group:default/platformengineers, role:default/location_read"
   - "g, group:default/platformengineers, role:default/platformengineer"
