Secret for OpenShift token and API URL

--- a/orchestrator/orchestrator/values.yaml
+++ b/orchestrator/orchestrator/values.yaml
@@ -20,7 +20,12 @@ backstage:
   operator:
     enabled: false
 
+openshift:
+  token:
+  api:
+
 argocd:
   enabled: true
   orchestrator:
     syncwave: "0"
+
