Conditional rbac policy for orchestrator

--- a/redhat-developer-hub/redhat-developer-hub-prereqs/templates/configmap-rbac-policy.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/templates/configmap-rbac-policy.yaml
@@ -11,3 +11,8 @@ data:
     {{- range $item := .Values.rbacPolicy }}
     {{ $item }}
     {{- end }}
+  rbac-conditional-policies.yaml: |
+    {{- range $item := .Values.rbacConditionalPolicies }}
+    ---
+    {{- toYaml $item | nindent 4 }}
+    {{- end }}   
