--- a/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-prereqs/values.yaml
@@ -43,11 +43,8 @@ rbacPolicy:
   - "p, role:default/plugins, argocd.view.read, read, allow"
   - "p, role:default/plugins, kubernetes.proxy, use, allow"
 
-  - "p, role:default/workflowUser, orchestrator.workflowInstances.read, read, allow"
-  - "p, role:default/workflowUser, orchestrator.workflowInstance.read, read, allow"
-  - "p, role:default/workflowUser, orchestrator.workflow.read, read, allow"
-  - "p, role:default/workflowUser, orchestrator.workflow.execute, use, allow"
-  - "p, role:default/workflowUser, orchestrator.workflowInstance.abort, delete, allow"
+  - "p, role:default/workflowUser, orchestrator.workflow.create-ocp-namespace-swt, read, allow"
+  - "p, role:default/workflowUser, orchestrator.workflow.use.create-ocp-namespace-swt, update, allow"
 
   - "p, role:default/workflowAdmin, orchestrator.workflow, read, allow"
   - "p, role:default/workflowAdmin, orchestrator.workflow.use, update, allow"
